--- a/webpage/result.html
+++ b/webpage/result.html
@@ -16,7 +16,7 @@
             <a href="temperature.html" class="active2">Temperature</a>
         </div>
         <p>Result of your calculation</p>
-        <p id="output">20 ft = 609 cm</p>
+        <p id="result"></p>
         <button onclick="reset()">Reset</button>
     </div>
     <script src="script.js"></script>
